refact: convert css to css module

--- a/web/src/components/Header/Header.module.css
+++ b/web/src/components/Header/Header.module.css
@@ -6,13 +6,25 @@ header {
 nav {
 	@apply mx-auto;
 	display: flex;
-	flex-wrap: wrap
+	flex-wrap: wrap;
 }
 
-nav > div {
-	@apply mx-2;
+nav > ul {
 	display: flex;
 	align-items: center;
+}
+
+nav > ul > li {
+	display: flex;
+	align-items: center;
+}
+
+.navLink {
+	@apply rounded px-2 py-1 text-zinc-600;
+}
+
+.navLink:hover {
+	@apply bg-zinc-200/55 text-zinc-600;
 }
 
 .logo {
@@ -24,8 +36,6 @@ nav > div {
 	}
 }
 
-
-
 .search_input {
 	@apply mx-2 h-8 min-w-48 border-gray-200 bg-gray-200 pl-2.5 text-gray-500
 	outline-none ring-1 ring-transparent hover:ring-gray-400 focus:min-w-64 focus:border-gray-700/95 focus:ring-gray-700/95;
@@ -34,7 +44,7 @@ nav > div {
 }
 
 .avatarWrapper {
-	@apply ml-2 w-[6rem] justify-center my-1;
+	@apply my-1 ml-2 w-[6rem] justify-center;
 }
 
 .avatar {
