--- a/web/src/style/shadow/shadow_default.css
+++ b/web/src/style/shadow/shadow_default.css
@@ -15,7 +15,8 @@
 }
 
 /* Shadows */
-html, html[data-mode="light"] {
+html,
+html[data-mode="light"] {
 	--gray-a1: #00000003;
 	--gray-a2: #00000006;
 	--gray-a3: #0000000f;
@@ -29,24 +30,39 @@ html, html[data-mode="light"] {
 	--gray-a11: #0000009b;
 	--gray-a12: #000000df;
 
-	--shadow-1: inset 0 0 0 1px var(--gray-a5),
-		inset 0 1.5px 2px 0 var(--gray-a2), inset 0 1.5px 2px 0 var(--black-a2);
+	--shadow-1:
+		inset 0 0 0 1px var(--gray-a5),
+		inset 0 1.5px 2px 0 var(--gray-a2),
+		inset 0 1.5px 2px 0 var(--black-a2);
 
-	--shadow-2: 0 0 0 1px var(--gray-a3), 0 0 0 0.5px var(--black-a1),
-		0 1px 1px 0 var(--gray-a2), 0 2px 1px -1px var(--black-a1),
+	--shadow-2:
+		0 0 0 1px var(--gray-a3),
+		0 0 0 0.5px var(--black-a1),
+		0 1px 1px 0 var(--gray-a2),
+		0 2px 1px -1px var(--black-a1),
 		0 1px 3px 0 var(--black-a1);
 
-	--shadow-3: 0 0 0 1px var(--gray-a3), 0 2px 3px -2px var(--gray-a3),
-		0 3px 12px -4px var(--black-a2), 0 4px 16px -8px var(--black-a2);
+	--shadow-3:
+		0 0 0 1px var(--gray-a3),
+		0 2px 3px -2px var(--gray-a3),
+		0 3px 12px -4px var(--black-a2),
+		0 4px 16px -8px var(--black-a2);
 
-	--shadow-4: 0 0 0 1px var(--gray-a3), 0 8px 40px var(--black-a1),
+	--shadow-4:
+		0 0 0 1px var(--gray-a3),
+		0 8px 40px var(--black-a1),
 		0 12px 32px -16px var(--gray-a3);
 
-	--shadow-5: 0 0 0 1px var(--gray-a3), 0 12px 60px var(--black-a3),
+	--shadow-5:
+		0 0 0 1px var(--gray-a3),
+		0 12px 60px var(--black-a3),
 		0 12px 32px -16px var(--gray-a5);
 
-	--shadow-6: 0 0 0 1px var(--gray-a3), 0 12px 60px var(--black-a3),
-		0 16px 64px var(--gray-a2), 0 16px 36px -20px var(--gray-a7);
+	--shadow-6:
+		0 0 0 1px var(--gray-a3),
+		0 12px 60px var(--black-a3),
+		0 16px 64px var(--gray-a2),
+		0 16px 36px -20px var(--gray-a7);
 }
 
 html[data-mode="dark"] {
@@ -63,23 +79,57 @@ html[data-mode="dark"] {
 	--gray-a11: #ffffffaf;
 	--gray-a12: #ffffffed;
 
-	--shadow-1: inset 0 -1px 1px 0 var(--gray-a3),
-		inset 0 0 0 1px var(--gray-a3), inset 0 3px 4px 0 var(--black-a5),
+	--shadow-1:
+		inset 0 -1px 1px 0 var(--gray-a3),
+		inset 0 0 0 1px var(--gray-a3),
+		inset 0 3px 4px 0 var(--black-a5),
 		inset 0 0 0 1px var(--gray-a4);
 
-	--shadow-2: 0 0 0 1px var(--gray-a6), 0 0 0 0.5px var(--black-a3),
-		0 1px 1px 0 var(--black-a6), 0 2px 1px -1px var(--black-a6),
+	--shadow-2:
+		0 0 0 1px var(--gray-a6),
+		0 0 0 0.5px var(--black-a3),
+		0 1px 1px 0 var(--black-a6),
+		0 2px 1px -1px var(--black-a6),
 		0 1px 3px 0 var(--black-a5);
 
-	--shadow-3: 0 0 0 1px var(--gray-a6), 0 2px 3px -2px var(--black-a3),
-		0 3px 8px -2px var(--black-a6), 0 4px 12px -4px var(--black-a7);
+	--shadow-3:
+		0 0 0 1px var(--gray-a6),
+		0 2px 3px -2px var(--black-a3),
+		0 3px 8px -2px var(--black-a6),
+		0 4px 12px -4px var(--black-a7);
 
-	--shadow-4: 0 0 0 1px var(--gray-a6), 0 8px 40px var(--black-a3),
+	--shadow-4:
+		0 0 0 1px var(--gray-a6),
+		0 8px 40px var(--black-a3),
 		0 12px 32px -16px var(--black-a5);
 
-	--shadow-5: 0 0 0 1px var(--gray-a6), 0 12px 60px var(--black-a5),
+	--shadow-5:
+		0 0 0 1px var(--gray-a6),
+		0 12px 60px var(--black-a5),
 		0 12px 32px -16px var(--black-a7);
 
-	--shadow-6: 0 0 0 1px var(--gray-a6), 0 12px 60px var(--black-a4),
-		0 16px 64px var(--black-a6), 0 16px 36px -20px var(--black-a11);
+	--shadow-6:
+		0 0 0 1px var(--gray-a6),
+		0 12px 60px var(--black-a4),
+		0 16px 64px var(--black-a6),
+		0 16px 36px -20px var(--black-a11);
+}
+
+.shadow-1{
+	box-shadow: var(--shadow-1);
+}
+.shadow-2 {
+	box-shadow: var(--shadow-2);
+}
+.shadow-3 {
+	box-shadow: var(--shadow-3);
+}
+.shadow-4 {
+	box-shadow: var(--shadow-4);
+}
+.shadow-5 {
+	box-shadow: var(--shadow-5);
+}
+.shadow-6 {
+	box-shadow: var(--shadow-6);
 }
