--- a/web/src/style/shadow/shadow_p3.css
+++ b/web/src/style/shadow/shadow_p3.css
@@ -1,49 +1,51 @@
+/* prettier-ignore  */
 @supports (color: color(display-p3 1 1 1)) {
 	@media (color-gamut: p3) {
 		:root {
-			--black-a1: color(display-p3 0 0 0 / 0.05);
-			--black-a2: color(display-p3 0 0 0 / 0.1);
-			--black-a3: color(display-p3 0 0 0 / 0.15);
-			--black-a4: color(display-p3 0 0 0 / 0.2);
-			--black-a5: color(display-p3 0 0 0 / 0.3);
-			--black-a6: color(display-p3 0 0 0 / 0.4);
-			--black-a7: color(display-p3 0 0 0 / 0.5);
-			--black-a8: color(display-p3 0 0 0 / 0.6);
-			--black-a9: color(display-p3 0 0 0 / 0.7);
-			--black-a10: color(display-p3 0 0 0 / 0.8);
-			--black-a11: color(display-p3 0 0 0 / 0.9);
+			--black-a1 : color(display-p3 0 0 0 / 0.05);
+			--black-a2 : color(display-p3 0 0 0 / 0.1 );
+			--black-a3 : color(display-p3 0 0 0 / 0.15);
+			--black-a4 : color(display-p3 0 0 0 / 0.2 );
+			--black-a5 : color(display-p3 0 0 0 / 0.3 );
+			--black-a6 : color(display-p3 0 0 0 / 0.4 );
+			--black-a7 : color(display-p3 0 0 0 / 0.5 );
+			--black-a8 : color(display-p3 0 0 0 / 0.6 );
+			--black-a9 : color(display-p3 0 0 0 / 0.7 );
+			--black-a10: color(display-p3 0 0 0 / 0.8 );
+			--black-a11: color(display-p3 0 0 0 / 0.9 );
 			--black-a12: color(display-p3 0 0 0 / 0.95);
 		}
 	}
 }
-
+/* prettier-ignore */
 @supports (color: color(display-p3 1 1 1)) {
 	@media (color-gamut: p3) {
-		html, html[data-mode="light"] {
-			--gray-a1: color(display-p3 0 0 0 / 0.012);
-			--gray-a2: color(display-p3 0 0 0 / 0.024);
-			--gray-a3: color(display-p3 0 0 0 / 0.063);
-			--gray-a4: color(display-p3 0 0 0 / 0.09);
-			--gray-a5: color(display-p3 0 0 0 / 0.122);
-			--gray-a6: color(display-p3 0 0 0 / 0.153);
-			--gray-a7: color(display-p3 0 0 0 / 0.192);
-			--gray-a8: color(display-p3 0 0 0 / 0.267);
-			--gray-a9: color(display-p3 0 0 0 / 0.447);
+		html,
+		html[data-mode="light"] {
+			--gray-a1 : color(display-p3 0 0 0 / 0.012);
+			--gray-a2 : color(display-p3 0 0 0 / 0.024);
+			--gray-a3 : color(display-p3 0 0 0 / 0.063);
+			--gray-a4 : color(display-p3 0 0 0 / 0.090);
+			--gray-a5 : color(display-p3 0 0 0 / 0.122);
+			--gray-a6 : color(display-p3 0 0 0 / 0.153);
+			--gray-a7 : color(display-p3 0 0 0 / 0.192);
+			--gray-a8 : color(display-p3 0 0 0 / 0.267);
+			--gray-a9 : color(display-p3 0 0 0 / 0.447);
 			--gray-a10: color(display-p3 0 0 0 / 0.486);
 			--gray-a11: color(display-p3 0 0 0 / 0.608);
 			--gray-a12: color(display-p3 0 0 0 / 0.875);
 		}
 
 		html[data-mode="dark"] {
-			--gray-a1: color(display-p3 0 0 0 / 0);
-			--gray-a2: color(display-p3 1 1 1 / 0.034);
-			--gray-a3: color(display-p3 1 1 1 / 0.071);
-			--gray-a4: color(display-p3 1 1 1 / 0.105);
-			--gray-a5: color(display-p3 1 1 1 / 0.134);
-			--gray-a6: color(display-p3 1 1 1 / 0.172);
-			--gray-a7: color(display-p3 1 1 1 / 0.231);
-			--gray-a8: color(display-p3 1 1 1 / 0.332);
-			--gray-a9: color(display-p3 1 1 1 / 0.391);
+			--gray-a1 : color(display-p3 0 0 0 / 0    );
+			--gray-a2 : color(display-p3 1 1 1 / 0.034);
+			--gray-a3 : color(display-p3 1 1 1 / 0.071);
+			--gray-a4 : color(display-p3 1 1 1 / 0.105);
+			--gray-a5 : color(display-p3 1 1 1 / 0.134);
+			--gray-a6 : color(display-p3 1 1 1 / 0.172);
+			--gray-a7 : color(display-p3 1 1 1 / 0.231);
+			--gray-a8 : color(display-p3 1 1 1 / 0.332);
+			--gray-a9 : color(display-p3 1 1 1 / 0.391);
 			--gray-a10: color(display-p3 1 1 1 / 0.445);
 			--gray-a11: color(display-p3 1 1 1 / 0.685);
 			--gray-a12: color(display-p3 1 1 1 / 0.929);
