--- a/web/packages/web/src/app.css
+++ b/web/packages/web/src/app.css
@@ -10,6 +10,7 @@
 		url("./style/font/Geist/GeistVF.woff2") format("woff2"),
 		url("./style/font/Geist/GeistVF.woff") format("woff"),
 		url("./style/font/Geist/GeistVF.ttf") format("truetype");
+	font-display: swap;
 }
 
 html {
