--- a/web/packages/web/src/app.css
+++ b/web/packages/web/src/app.css
@@ -9,6 +9,7 @@ html {
 	white-space: break-spaces;
 	font-family:
 		"Geist",
+		"Noto Sans SC",
 		-apple-system,
 		BlinkMacSystemFont,
 		Roboto,
