--- a/web/packages/web/src/style/color/color.css
+++ b/web/packages/web/src/style/color/color.css
@@ -1,188 +1,87 @@
 @layer base {
-	/* 颜色食用说明：https://vercel.com/geist/colors */
+	:root {
+		--blue-100: 206 73% 96%;
+		--blue-1000: 215 98% 22%;
+		--blue-1100: 218 90% 16%;
+		--blue-1200: 224 67% 12%;
+		--blue-200: 206 85% 92%;
+		--blue-300: 207 100% 88%;
+		--blue-400: 209 100% 72%;
+		--blue-500: 209 100% 64%;
+		--blue-600: 209 89% 55%;
+		--blue-700: 209 100% 41%;
+		--blue-800: 211 100% 36%;
+		--blue-900: 217 75% 33%;
+		--gray-100: 0 0 95%;
+		--gray-1000: 0 0 20%;
+		--gray-1100: 0 0 13%;
+		--gray-1200: 0 0 7%;
+		--gray-200: 0 0 92%;
+		--gray-300: 0 0 87%;
+		--gray-400: 0 0 71%;
+		--gray-500: 0 0 64%;
+		--gray-600: 0 0 56%;
+		--gray-700: 0 0 44%;
+		--gray-800: 0 0 37%;
+		--gray-900: 0 0 29%;
+		--green-100: 138 45% 94%;
+		--green-1000: 142 100% 12%;
+		--green-1100: 141 100% 8%;
+		--green-1200: 133 100% 5%;
+		--green-200: 132 65% 88%;
+		--green-300: 134 73% 80%;
+		--green-400: 138 54% 56%;
+		--green-500: 143 75% 42%;
+		--green-600: 139 71% 37%;
+		--green-700: 143 100% 25%;
+		--green-800: 138 68% 25%;
+		--green-900: 138 69% 20%;
+		--marisa-100: 52 59% 92%;
+		--marisa-1000: 35 100% 15%;
+		--marisa-1100: 36 100% 10%;
+		--marisa-1200: 36 100% 6%;
+		--marisa-200: 55 66% 84%;
+		--marisa-300: 51 75% 75%;
+		--marisa-400: 46 65% 53%;
+		--marisa-500: 45 76% 45%;
+		--marisa-600: 41 89% 38%;
+		--marisa-700: 40 100% 29%;
+		--marisa-800: 36 86% 28%;
+		--marisa-900: 37 100% 21%;
+		--reimu-100: 0 65% 97%;
+		--reimu-1000: 1 66% 23%;
+		--reimu-1100: 359 94% 13%;
+		--reimu-1200: 8 100% 8%;
+		--reimu-200: 0 100% 95%;
+		--reimu-300: 1 100% 92%;
+		--reimu-400: 4 100% 79%;
+		--reimu-500: 2 100% 73%;
+		--reimu-600: 3 90% 63%;
+		--reimu-700: 357 65% 48%;
+		--reimu-800: 358 67% 41%;
+		--reimu-900: 359 66% 32%;
+		--slate-100: 220 14% 96%;
+		--slate-1000: 215 15% 22%;
+		--slate-1100: 217 18% 14%;
+		--slate-1200: 216 28% 7%;
+		--slate-200: 220 14% 92%;
+		--slate-300: 218 13% 88%;
+		--slate-400: 215 12% 72%;
+		--slate-500: 219 9% 65%;
+		--slate-600: 217 8% 57%;
+		--slate-700: 215 11% 45%;
+		--slate-800: 219 12% 39%;
+		--slate-900: 219 11% 30%;
+	}
+
 	html,
 	html[data-mode="light"] {
-		--gray-100: 0 0% 95%;
-		--gray-200: 0 0% 93%;
-		--gray-300: 0 0% 91%;
-		--gray-400: 0 0% 85%;
-		--gray-500: 0 0% 79%;
-		--gray-600: 0 0% 66%;
-		--gray-700: 0 0% 56%;
-		--gray-800: 0 0% 49%;
-		--gray-900: 0 0% 40%;
-		--gray-1000: 0 0% 9%;
-
-		--red-100: 0 100% 97%;
-		--red-200: 0 100% 96%;
-		--red-300: 0 100% 95%;
-		--red-400: 0 90% 92%;
-		--red-500: 0 82% 85%;
-		--red-600: 359 91% 71%;
-		--red-700: 358 75% 59%;
-		--red-800: 358 70% 52%;
-		--red-900: 358 66% 48%;
-		--red-1000: 355 48% 15%;
-
-		--orange-100: 38 100% 95%;
-		--orange-200: 44 100% 92%;
-		--orange-300: 43 96% 90%;
-		--orange-400: 42 100% 78%;
-		--orange-500: 38 100% 71%;
-		--orange-600: 36 90% 62%;
-		--orange-700: 39 100% 57%;
-		--orange-800: 35 100% 52%;
-		--orange-900: 30 100% 32%;
-		--orange-1000: 20 79% 17%;
-
-		--green-100: 120 60% 96%;
-		--green-200: 120 60% 95%;
-		--green-300: 120 61% 91%;
-		--green-400: 121 61% 86%;
-		--green-500: 124 61% 75%;
-		--green-600: 125 60% 64%;
-		--green-700: 131 41% 46%;
-		--green-800: 132 43% 39%;
-		--green-900: 133 50% 32%;
-		--green-1000: 128 29% 15%;
-
-		--cyan-100: 177 70% 96%;
-		--cyan-200: 179 68% 94%;
-		--cyan-300: 178 69% 90%;
-		--cyan-400: 180 71% 85%;
-		--cyan-500: 180 70% 72%;
-		--cyan-600: 180 70% 57%;
-		--cyan-700: 183 80% 36%;
-		--cyan-800: 183 83% 30%;
-		--cyan-900: 184 91% 25%;
-		--cyan-1000: 171 79% 13%;
-
-		--blue-100: 212 100% 97%;
-		--blue-200: 210 100% 96%;
-		--blue-300: 209 100% 94%;
-		--blue-400: 209 100% 90%;
-		--blue-500: 209 100% 80%;
-		--blue-600: 208 100% 66%;
-		--blue-700: 212 100% 48%;
-		--blue-800: 212 100% 41%;
-		--blue-900: 211 100% 42%;
-		--blue-1000: 211 100% 15%;
-
-		--purple-100: 276 100% 97%;
-		--purple-200: 277 87% 97%;
-		--purple-300: 276 77% 95%;
-		--purple-400: 275 71% 92%;
-		--purple-500: 274 70% 82%;
-		--purple-600: 273 72% 73%;
-		--purple-700: 272 51% 54%;
-		--purple-800: 272 47% 45%;
-		--purple-900: 274 71% 43%;
-		--purple-1000: 276 100% 15%;
-
-		--pink-100: 330 100% 96%;
-		--pink-200: 340 90% 96%;
-		--pink-300: 338 81% 94%;
-		--pink-400: 341 74% 91%;
-		--pink-500: 340 75% 84%;
-		--pink-600: 341 75% 73%;
-		--pink-700: 336 80% 58%;
-		--pink-800: 336 74% 51%;
-		--pink-900: 336 65% 45%;
-		--pink-1000: 334 74% 15%;
-
-		--bg-primary: 0 0% 100%;
-		--bg-secondary: 0 0% 98%;
+		--primary: 0 0 100;
+		--secondary: var(--gray-100);
 	}
+
 	html[data-mode="dark"] {
-		--gray-100: 0 0% 10%;
-		--gray-200: 0 0% 12%;
-		--gray-300: 0 0% 16%;
-		--gray-400: 0 0% 18%;
-		--gray-500: 0 0% 27%;
-		--gray-600: 0 0% 53%;
-		--gray-700: 0 0% 56%;
-		--gray-800: 0 0% 49%;
-		--gray-900: 0 0% 63%;
-		--gray-1000: 0 0% 93%;
-
-		--red-100: 357 38% 12%;
-		--red-200: 357 46% 16%;
-		--red-300: 356 54% 22%;
-		--red-400: 358 55% 26%;
-		--red-500: 357 60% 32%;
-		--red-600: 358 75% 59%;
-		--red-700: 358 75% 59%;
-		--red-800: 358 69% 52%;
-		--red-900: 358 100% 69%;
-		--red-1000: 353 90% 96%;
-
-		--orange-100: 35 100% 8%;
-		--orange-200: 32 100% 10%;
-		--orange-300: 33 100% 15%;
-		--orange-400: 35 100% 17%;
-		--orange-500: 35 91% 22%;
-		--orange-600: 39 85% 49%;
-		--orange-700: 39 100% 57%;
-		--orange-800: 35 100% 52%;
-		--orange-900: 35 100% 52%;
-		--orange-1000: 41 94% 93%;
-
-		--green-100: 138 51% 9%;
-		--green-200: 137 51% 12%;
-		--green-300: 135 50% 14%;
-		--green-400: 136 70% 16%;
-		--green-500: 135 69% 23%;
-		--green-600: 135 70% 34%;
-		--green-700: 131 41% 46%;
-		--green-800: 132 43% 39%;
-		--green-900: 131 43% 57%;
-		--green-1000: 134 73% 94%;
-
-		--cyan-100: 169 78% 7%;
-		--cyan-200: 169 74% 9%;
-		--cyan-300: 172 76% 13%;
-		--cyan-400: 171 85% 13%;
-		--cyan-500: 172 84% 20%;
-		--cyan-600: 172 85% 32%;
-		--cyan-700: 173 80% 36%;
-		--cyan-800: 173 83% 30%;
-		--cyan-900: 174 90% 41%;
-		--cyan-1000: 166 72% 93%;
-
-		--blue-100: 215 51% 12%;
-		--blue-200: 215 58% 15%;
-		--blue-300: 213 71% 20%;
-		--blue-400: 212 78% 23%;
-		--blue-500: 211 86% 27%;
-		--blue-600: 206 100% 50%;
-		--blue-700: 212 100% 48%;
-		--blue-800: 212 100% 41%;
-		--blue-900: 210 100% 66%;
-		--blue-1000: 207 100% 96%;
-
-		--purple-100: 284 31% 12%;
-		--purple-200: 281 38% 16%;
-		--purple-300: 279 44% 23%;
-		--purple-400: 277 45% 28%;
-		--purple-500: 274 49% 35%;
-		--purple-600: 272 51% 54%;
-		--purple-700: 272 51% 54%;
-		--purple-800: 272 47% 45%;
-		--purple-900: 275 80% 71%;
-		--purple-1000: 284 71% 96%;
-
-		--pink-100: 335 31% 12%;
-		--pink-200: 334 43% 16%;
-		--pink-300: 335 48% 21%;
-		--pink-400: 335 52% 22%;
-		--pink-500: 335 57% 27%;
-		--pink-600: 336 75% 40%;
-		--pink-700: 336 80% 58%;
-		--pink-800: 336 74% 51%;
-		--pink-900: 341 90% 67%;
-		--pink-1000: 333 90% 96%;
-
-		--bg-primary: 0 0% 8%;
-		--bg-secondary: 0 0% 5%;
+		--primary: var(--gray-1200);
+		--secondary: var(--gray-1100);
 	}
 }
