--- a/web/packages/web/src/style/style.css
+++ b/web/packages/web/src/style/style.css
@@ -1,5 +1,5 @@
+@import "./font.css";
 @import "./color/color.css";
 @import "./component/component.css";
-@import "./font/font.css";
 @import "./shadow/shadow.css";
 @import "./util/no_spinner.css";
