--- a/web/packages/web/src/style/color/color.css
+++ b/web/packages/web/src/style/color/color.css
@@ -1,87 +1,166 @@
 @layer base {
-	:root {
-		--blue-100: 206 73% 96%;
-		--blue-1000: 215 98% 22%;
-		--blue-1100: 218 90% 16%;
-		--blue-1200: 224 67% 12%;
-		--blue-200: 206 85% 92%;
-		--blue-300: 207 100% 88%;
-		--blue-400: 209 100% 72%;
-		--blue-500: 209 100% 64%;
-		--blue-600: 209 89% 55%;
-		--blue-700: 209 100% 41%;
-		--blue-800: 211 100% 36%;
-		--blue-900: 217 75% 33%;
-		--gray-100: 0 0 95%;
-		--gray-1000: 0 0 20%;
-		--gray-1100: 0 0 13%;
-		--gray-1200: 0 0 7%;
-		--gray-200: 0 0 92%;
-		--gray-300: 0 0 87%;
-		--gray-400: 0 0 71%;
-		--gray-500: 0 0 64%;
-		--gray-600: 0 0 56%;
-		--gray-700: 0 0 44%;
-		--gray-800: 0 0 37%;
-		--gray-900: 0 0 29%;
-		--green-100: 138 45% 94%;
-		--green-1000: 142 100% 12%;
-		--green-1100: 141 100% 8%;
-		--green-1200: 133 100% 5%;
-		--green-200: 132 65% 88%;
-		--green-300: 134 73% 80%;
-		--green-400: 138 54% 56%;
-		--green-500: 143 75% 42%;
-		--green-600: 139 71% 37%;
-		--green-700: 143 100% 25%;
-		--green-800: 138 68% 25%;
-		--green-900: 138 69% 20%;
-		--marisa-100: 52 59% 92%;
-		--marisa-1000: 35 100% 15%;
-		--marisa-1100: 36 100% 10%;
-		--marisa-1200: 36 100% 6%;
-		--marisa-200: 55 66% 84%;
-		--marisa-300: 51 75% 75%;
-		--marisa-400: 46 65% 53%;
-		--marisa-500: 45 76% 45%;
-		--marisa-600: 41 89% 38%;
-		--marisa-700: 40 100% 29%;
-		--marisa-800: 36 86% 28%;
-		--marisa-900: 37 100% 21%;
-		--reimu-100: 0 65% 97%;
-		--reimu-1000: 1 66% 23%;
-		--reimu-1100: 359 94% 13%;
-		--reimu-1200: 8 100% 8%;
-		--reimu-200: 0 100% 95%;
-		--reimu-300: 1 100% 92%;
-		--reimu-400: 4 100% 79%;
-		--reimu-500: 2 100% 73%;
-		--reimu-600: 3 90% 63%;
-		--reimu-700: 357 65% 48%;
-		--reimu-800: 358 67% 41%;
-		--reimu-900: 359 66% 32%;
-		--slate-100: 220 14% 96%;
-		--slate-1000: 215 15% 22%;
-		--slate-1100: 217 18% 14%;
-		--slate-1200: 216 28% 7%;
-		--slate-200: 220 14% 92%;
-		--slate-300: 218 13% 88%;
-		--slate-400: 215 12% 72%;
-		--slate-500: 219 9% 65%;
-		--slate-600: 217 8% 57%;
-		--slate-700: 215 11% 45%;
-		--slate-800: 219 12% 39%;
-		--slate-900: 219 11% 30%;
-	}
-
+	/* global */
+	/*
+	https://leonardocolor.io/theme.html?name=THCDB&config=%7B%22baseScale%22%3A%22gray-%22%2C%22colorScales%22%3A%5B%7B%22name%22%3A%22slate-%22%2C%22colorKeys%22%3A%5B%22%23575e6d%22%2C%22%23e8eaed%22%5D%2C%22colorspace%22%3A%22RGB%22%2C%22ratios%22%3A%5B%221.1%22%2C%221.2%22%2C%221.33%22%2C%221.96%22%2C%222.55%22%2C%223.3%22%2C%224.81%22%2C%226.48%22%2C%228.72%22%2C%2212.82%22%2C%2215.13%22%2C%2218.26%22%5D%2C%22smooth%22%3Afalse%7D%2C%7B%22name%22%3A%22gray-%22%2C%22colorKeys%22%3A%5B%22%23000000%22%5D%2C%22colorspace%22%3A%22RGB%22%2C%22ratios%22%3A%5B%221.1%22%2C%221.2%22%2C%221.33%22%2C%221.96%22%2C%222.55%22%2C%223.3%22%2C%224.81%22%2C%226.48%22%2C%228.72%22%2C%2212.82%22%2C%2215.13%22%2C%2218.26%22%5D%2C%22smooth%22%3Afalse%7D%2C%7B%22name%22%3A%22reimu-%22%2C%22colorKeys%22%3A%5B%22%23cf222e%22%5D%2C%22colorspace%22%3A%22RGB%22%2C%22ratios%22%3A%5B%221.1%22%2C%221.2%22%2C%221.33%22%2C%221.96%22%2C%222.55%22%2C%223.3%22%2C%224.81%22%2C%226.48%22%2C%228.72%22%2C%2212.82%22%2C%2215.13%22%2C%2218.26%22%5D%2C%22smooth%22%3Atrue%7D%2C%7B%22name%22%3A%22blue-%22%2C%22colorKeys%22%3A%5B%22%23446ff2%22%2C%22%237db9fb%22%5D%2C%22colorspace%22%3A%22RGB%22%2C%22ratios%22%3A%5B%221.1%22%2C%221.2%22%2C%221.33%22%2C%221.96%22%2C%222.55%22%2C%223.3%22%2C%224.81%22%2C%226.48%22%2C%228.72%22%2C%2212.82%22%2C%2215.13%22%2C%2218.26%22%5D%2C%22smooth%22%3Atrue%7D%2C%7B%22name%22%3A%22marisa-%22%2C%22colorKeys%22%3A%5B%22%23a26f19%22%2C%22%23eedfa6%22%2C%22%23cb9a35%22%5D%2C%22colorspace%22%3A%22RGB%22%2C%22ratios%22%3A%5B%221.1%22%2C%221.2%22%2C%221.33%22%2C%221.96%22%2C%222.55%22%2C%223.3%22%2C%224.81%22%2C%226.48%22%2C%228.72%22%2C%2212.82%22%2C%2215.13%22%2C%2218.26%22%5D%2C%22smooth%22%3Atrue%7D%2C%7B%22name%22%3A%22green-%22%2C%22colorKeys%22%3A%5B%22%231ca247%22%2C%22%23acefc2%22%5D%2C%22colorspace%22%3A%22RGB%22%2C%22ratios%22%3A%5B%221.1%22%2C%221.2%22%2C%221.33%22%2C%221.96%22%2C%222.55%22%2C%223.3%22%2C%224.81%22%2C%226.48%22%2C%228.72%22%2C%2212.82%22%2C%2215.13%22%2C%2218.26%22%5D%2C%22smooth%22%3Atrue%7D%5D%2C%22lightness%22%3A100%2C%22contrast%22%3A1%2C%22saturation%22%3A100%2C%22formula%22%3A%22wcag2%22%7D
+	*/
 	html,
 	html[data-mode="light"] {
-		--primary: 0 0 100;
-		--secondary: var(--gray-100);
+		--slate-100: 210 9% 96%;
+		--slate-200: 216 12% 92%;
+		--slate-300: 220 10% 88%;
+		--slate-400: 218 8% 73%;
+		--slate-500: 219 8% 64%;
+		--slate-600: 217 7% 56%;
+		--slate-700: 222 8% 46%;
+		--slate-800: 223 11% 39%;
+		--slate-900: 222 11% 31%;
+		--slate-1000: 224 10% 21%;
+		--slate-1100: 220 11% 15%;
+		--slate-1200: 225 9% 9%;
+		--gray-100: 0 0% 95%;
+		--gray-200: 0 0% 91%;
+		--gray-300: 0 0% 87%;
+		--gray-400: 0 0% 73%;
+		--gray-500: 0 0% 64%;
+		--gray-600: 0 0% 55%;
+		--gray-700: 0 0% 45%;
+		--gray-800: 0 0% 37%;
+		--gray-900: 0 0% 29%;
+		--gray-1000: 0 0% 20%;
+		--gray-1100: 0 0% 15%;
+		--gray-1200: 0 0% 8%;
+		--reimu-100: 0 75% 97%;
+		--reimu-200: 357 79% 94%;
+		--reimu-300: 357 78% 91%;
+		--reimu-400: 356 82% 80%;
+		--reimu-500: 356 80% 73%;
+		--reimu-600: 356 78% 65%;
+		--reimu-700: 356 69% 51%;
+		--reimu-800: 356 81% 41%;
+		--reimu-900: 356 88% 32%;
+		--reimu-1000: 356 93% 22%;
+		--reimu-1100: 356 95% 17%;
+		--reimu-1200: 356 92% 10%;
+		--blue-100: 210 100% 96%;
+		--blue-200: 209 95% 92%;
+		--blue-300: 209 97% 88%;
+		--blue-400: 211 94% 75%;
+		--blue-500: 216 100% 70%;
+		--blue-600: 222 100% 66%;
+		--blue-700: 225 79% 58%;
+		--blue-800: 226 59% 48%;
+		--blue-900: 226 60% 39%;
+		--blue-1000: 227 60% 26%;
+		--blue-1100: 227 59% 20%;
+		--blue-1200: 228 59% 11%;
+		--marisa-100: 50 71% 92%;
+		--marisa-200: 49 71% 85%;
+		--marisa-300: 48 68% 79%;
+		--marisa-400: 42 63% 61%;
+		--marisa-500: 40 59% 50%;
+		--marisa-600: 39 71% 43%;
+		--marisa-700: 37 74% 35%;
+		--marisa-800: 37 75% 28%;
+		--marisa-900: 37 76% 23%;
+		--marisa-1000: 37 77% 15%;
+		--marisa-1100: 38 76% 11%;
+		--marisa-1200: 36 76% 6%;
+		--green-100: 139 79% 92%;
+		--green-200: 140 75% 86%;
+		--green-300: 139 68% 80%;
+		--green-400: 139 55% 58%;
+		--green-500: 139 56% 46%;
+		--green-600: 139 71% 37%;
+		--green-700: 139 81% 29%;
+		--green-800: 139 85% 23%;
+		--green-900: 139 87% 18%;
+		--green-1000: 139 87% 12%;
+		--green-1100: 140 88% 9%;
+		--green-1200: 141 85% 5%;
 	}
 
 	html[data-mode="dark"] {
-		--primary: var(--gray-1200);
-		--secondary: var(--gray-1100);
+		--slate-100: 220 10% 6%;
+		--slate-200: 220 11% 11%;
+		--slate-300: 220 12% 14%;
+		--slate-400: 220 12% 25%;
+		--slate-500: 220 11% 32%;
+		--slate-600: 221 11% 39%;
+		--slate-700: 221 8% 47%;
+		--slate-800: 221 7% 57%;
+		--slate-900: 220 7% 67%;
+		--slate-1000: 222 9% 78%;
+		--slate-1100: 220 9% 87%;
+		--slate-1200: 220 13% 95%;
+		--gray-100: 0 0% 6%;
+		--gray-200: 0 0% 10%;
+		--gray-300: 0 0% 14%;
+		--gray-400: 0 0% 24%;
+		--gray-500: 0 0% 31%;
+		--gray-600: 0 0% 38%;
+		--gray-700: 0 0% 45%;
+		--gray-800: 0 0% 56%;
+		--gray-900: 0 0% 66%;
+		--gray-1000: 0 0% 78%;
+		--gray-1100: 0 0% 87%;
+		--gray-1200: 0 0% 95%;
+		--reimu-100: 358 67% 8%;
+		--reimu-200: 359 69% 13%;
+		--reimu-300: 357 71% 16%;
+		--reimu-400: 358 70% 28%;
+		--reimu-500: 358 68% 36%;
+		--reimu-600: 358 65% 44%;
+		--reimu-700: 358 65% 53%;
+		--reimu-800: 357 81% 65%;
+		--reimu-900: 357 87% 75%;
+		--reimu-1000: 357 90% 85%;
+		--reimu-1100: 357 87% 91%;
+		--reimu-1200: 355 76% 97%;
+		--blue-100: 224 60% 9%;
+		--blue-200: 227 59% 14%;
+		--blue-300: 226 60% 19%;
+		--blue-400: 226 60% 32%;
+		--blue-500: 226 59% 41%;
+		--blue-600: 226 59% 49%;
+		--blue-700: 226 81% 59%;
+		--blue-800: 221 100% 67%;
+		--blue-900: 214 97% 71%;
+		--blue-1000: 210 94% 80%;
+		--blue-1100: 209 97% 88%;
+		--blue-1200: 207 91% 96%;
+		--marisa-100: 38 76% 5%;
+		--marisa-200: 37 76% 8%;
+		--marisa-300: 37 75% 11%;
+		--marisa-400: 38 75% 19%;
+		--marisa-500: 37 75% 24%;
+		--marisa-600: 38 76% 29%;
+		--marisa-700: 37 74% 35%;
+		--marisa-800: 38 71% 43%;
+		--marisa-900: 41 60% 54%;
+		--marisa-1000: 44 64% 67%;
+		--marisa-1100: 48 67% 79%;
+		--marisa-1200: 50 71% 92%;
+		--green-100: 140 82% 4%;
+		--green-200: 141 88% 6%;
+		--green-300: 139 86% 9%;
+		--green-400: 139 87% 15%;
+		--green-500: 139 86% 19%;
+		--green-600: 139 83% 24%;
+		--green-700: 139 80% 29%;
+		--green-800: 139 69% 38%;
+		--green-900: 140 51% 50%;
+		--green-1000: 139 58% 66%;
+		--green-1100: 140 66% 79%;
+		--green-1200: 139 79% 92%;
+	}
+
+	html {
+		--primary: 0 0% 100%;
+		--secondary: var(--slate-100);
+	}
+
+	html[data-mode="dark"] {
+		--primary: var(--slate-100);
+		--secondary: 0 0% 0%;
 	}
 }
