style(fonts): Update Geist font-family and sources (#55)

--- a/web/packages/web/src/style/font.css
+++ b/web/packages/web/src/style/font.css
@@ -1,12 +1,9 @@
 @font-face {
-	font-family: "Geist";
+	font-family: Geist;
 	font-weight: 100 900;
 	src:
-		local("Geist"),
-		url("/src/assets/font/Geist/GeistVF.woff2") format("woff2"),
-		url("/src/assets/font/Geist/GeistVF.woff") format("woff"),
-		url("/src/assets/font/Geist/GeistVF.ttf") format("truetype");
-	font-display: swap;
+		local("Geist[wght]"),
+		url("/src/assets/font/Geist/Geist[wght].woff2") format("woff2");
 }
 
 @font-face {
