--- a/web/packages/web/src/app.css
+++ b/web/packages/web/src/app.css
@@ -1,7 +1,25 @@
-@import "./style/style.css";
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import './style/style.css';
+@import 'tailwindcss';
+
+@config '../tailwind.config.js';
+
+/*
+  The default border color has changed to `currentColor` in Tailwind CSS v4,
+  so we've added these compatibility styles to make sure everything still
+  looks the same as it did with Tailwind CSS v3.
+
+  If we ever want to remove these styles, we need to add an explicit border
+  color utility to any element that depends on these defaults.
+*/
+@layer base {
+  *,
+  ::after,
+  ::before,
+  ::backdrop,
+  ::file-selector-button {
+    border-color: hsl(var(--default-border-color));
+  }
+}
 
 html {
   color: hsl(var(--fg-primary));
