--- a/web/src/style/style.css
+++ b/web/src/style/style.css
@@ -1,5 +1,5 @@
-@import './font.css';
-@import './color/color.css';
-@import './component/component.css';
-@import './shadow/shadow.css';
-@import './util/no_spinner.css';
+@import "./font.css";
+@import "./color/color.css";
+@import "./component/component.css";
+@import "./shadow/shadow.css";
+@import "./util/no_spinner.css";
