Disable default tailwind colors

--- a/web/src/style/color/palette.css
+++ b/web/src/style/color/palette.css
@@ -1,4 +1,6 @@
 @theme {
+  --color-*: initial;
+
   --color-slate-100: hsl(210 9 96);
   --color-slate-200: hsl(216 12 92);
   --color-slate-300: hsl(220 10 88);
