--- a/web/src/style/style.css
+++ b/web/src/style/style.css
@@ -3,3 +3,4 @@
 @import "./component/component.css";
 @import "./shadow/shadow.css";
 @import "./util/no_spinner.css";
+@import "./animation/animation.css"
