--- a/web/src/style/color/palette.css
+++ b/web/src/style/color/palette.css
@@ -1,148 +1,60 @@
+/* [{"name":"TouhouCloud","id":1756338344576,"gamut":"srgb","tones":["100","200","300","400","500","600","700","800","900"],"hues":[{"name":"Slate","colors":["#f3f4f5","#e8eaed","#d5d7db",{"mode":"oklrchx","l":0.7873934202985255,"c":0.007899272949986273,"h":259.4208543232576},{"mode":"oklrchx","l":0.6712006596315496,"c":0.01094671566010354,"h":262.4793402784019},{"mode":"oklrchx","l":0.5359491652750908,"c":0.01314633507590618,"h":264.45073431066317},{"mode":"oklrchx","l":0.3938632475433994,"c":0.01293713357898264,"h":266.9000003846686},"#3a3d44","#1b1e25"]},{"name":"Reimu","colors":["#fff0ef",{"mode":"oklrchx","l":0.9205309572739141,"c":0.029990147890814434,"h":22.799374152014536},"#ffcac6","#ff9e99","#f87572","#db464c","#a82f33",{"mode":"oklrchx","l":0.26844109714549225,"c":0.11120710442192447,"h":24.890457964281495},{"mode":"oklrchx","l":0.13819677731289837,"c":0.07294583638229926,"h":29.050964800470354}]},{"name":"Blue","colors":["#edf4ff","#deeaff","#c4d9fd","#96baff","#719cfb","#4e76e2","#2755c7","#06328c","#011446"]},{"name":"Marisa","colors":["#fbf3d1","#f7eab8",{"mode":"oklrchx","l":0.8604612263445743,"c":0.08182288013950664,"h":90.11242128854212},{"mode":"oklrchx","l":0.7513076607040653,"c":0.10050069566832386,"h":83.6533377032348},{"mode":"oklrchx","l":0.6690781870997351,"c":0.10766797840909582,"h":81.10213777491049},{"mode":"oklrchx","l":0.5378032613446195,"c":0.11125174833365865,"h":80.56801425400965},{"mode":"oklrchx","l":0.42857426274439536,"c":0.09237763256226172,"h":77.14259075820667},{"mode":"oklrchx","l":0.27417090616560147,"c":0.0679056727849513,"h":76.02949192314304},{"mode":"oklrchx","l":0.11981004628912384,"c":0.038944774247541135,"h":75.85826870857358}]},{"name":"Green","colors":["#dcfce6","#c0f6d2","#92eaad","#62cf7d","#2fb459","#00903a","#006b28","#004616",{"mode":"oklrchx","l":0.11515561853357359,"c":0.07094154149807061,"h":146.94884813906395}]}]}] */
 @theme {
-	--color-slate-*: initial;
-	--color-slate-50: #f6f7f8;
-	--color-slate-100: hsl(210 9 96);
-	--color-slate-200: hsl(216 12 92);
-	--color-slate-300: hsl(220 10 88);
-	--color-slate-400: hsl(218 8 73);
-	--color-slate-500: hsl(219 8 64);
-	--color-slate-600: hsl(221 7 56);
-	--color-slate-700: hsl(218 8 48);
-	--color-slate-800: hsl(223 10 41);
-	--color-slate-900: hsl(223 11 32);
-	--color-slate-1000: hsl(222 12 22);
-	--color-slate-1100: hsl(223 11 12);
+	--color-*: initial;
+	--color-white: white;
+	--color-black: black;
+	/* slate */
+	--color-slate-100: #f3f4f5;
+	--color-slate-200: #e8eaed;
+	--color-slate-300: #d5d7db;
+	--color-slate-400: #c0c3c8;
+	--color-slate-500: #a0a4ab;
+	--color-slate-600: #7c8088;
+	--color-slate-700: #595c64;
+	--color-slate-800: #3a3d44;
+	--color-slate-900: #1b1e25;
 
-	--color-gray-100: hsl(0 0 95);
-	--color-gray-200: hsl(0 0 92);
-	--color-gray-300: hsl(0 0 87);
-	--color-gray-400: hsl(0 0 73);
-	--color-gray-500: hsl(0 0 64);
-	--color-gray-600: hsl(0 0 55);
-	--color-gray-700: hsl(0 0 46);
-	--color-gray-800: hsl(0 0 39);
-	--color-gray-900: hsl(0 0 31);
-	--color-gray-1000: hsl(0 0 21);
-	--color-gray-1100: hsl(0 0 12);
-	--color-reimu-100: hsl(4 100 97);
-	--color-reimu-200: hsl(6 100 94);
-	--color-reimu-300: hsl(5 100 91);
-	--color-reimu-400: hsl(3 100 80);
-	--color-reimu-500: hsl(1 99 73);
-	--color-reimu-600: hsl(0 82 65);
-	--color-reimu-700: hsl(357 67 54);
-	--color-reimu-800: hsl(356 67 45);
-	--color-reimu-900: hsl(354 77 34);
-	--color-reimu-1000: hsl(352 92 23);
-	--color-reimu-1100: hsl(354 100 14);
-	--color-blue-100: hsl(217 100 96);
-	--color-blue-200: hsl(218 100 94);
-	--color-blue-300: hsl(218 100 90);
-	--color-blue-400: hsl(219 100 79);
-	--color-blue-500: hsl(221 100 73);
-	--color-blue-600: hsl(224 100 67);
-	--color-blue-700: hsl(225 84 60);
-	--color-blue-800: hsl(226 65 51);
-	--color-blue-900: hsl(226 66 41);
-	--color-blue-1000: hsl(227 71 30);
-	--color-blue-1100: hsl(227 80 17);
-	--color-marisa-100: hsl(49 84 90);
-	--color-marisa-200: hsl(48 77 85);
-	--color-marisa-300: hsl(48 68 79);
-	--color-marisa-400: hsl(42 58 63);
-	--color-marisa-500: hsl(39 54 53);
-	--color-marisa-600: hsl(37 60 45);
-	--color-marisa-700: hsl(38 75 36);
-	--color-marisa-800: hsl(38 90 28);
-	--color-marisa-900: hsl(38 100 21);
-	--color-marisa-1000: hsl(37 100 15);
-	--color-marisa-1100: hsl(35 100 9);
-	--color-green-100: hsl(139 84 93);
-	--color-green-200: hsl(140 75 86);
-	--color-green-300: hsl(139 68 80);
-	--color-green-400: hsl(138 55 58);
-	--color-green-500: hsl(138 54 47);
-	--color-green-600: hsl(139 71 37);
-	--color-green-700: hsl(142 93 28);
-	--color-green-800: hsl(142 100 23);
-	--color-green-900: hsl(140 100 18);
-	--color-green-1000: hsl(137 100 12);
-	--color-green-1100: hsl(132 100 7);
-}
+	/* reimu */
+	--color-reimu-100: #fff0ef;
+	--color-reimu-200: #fce1df;
+	--color-reimu-300: #ffcac6;
+	--color-reimu-400: #ff9e99;
+	--color-reimu-500: #f87572;
+	--color-reimu-600: #db464c;
+	--color-reimu-700: #a82f33;
+	--color-reimu-800: #6f1c1b;
+	--color-reimu-900: #3d0c07;
 
-@layer theme {
-	[data-mode="dark"] {
-		--color-slate-100: hsl(220 10 6);
-		--color-slate-200: hsl(220 11 11);
-		--color-slate-300: hsl(220 12 14);
-		--color-slate-400: hsl(220 12 25);
-		--color-slate-500: hsl(220 11 32);
-		--color-slate-600: hsl(221 11 39);
-		--color-slate-700: hsl(221 8 47);
-		--color-slate-800: hsl(221 7 57);
-		--color-slate-900: hsl(220 7 67);
-		--color-slate-1000: hsl(222 9 78);
-		--color-slate-1100: hsl(220 9 87);
-		--color-slate-1200: hsl(220 13 95);
-		--color-gray-100: hsl(0 0 6);
-		--color-gray-200: hsl(0 0 10);
-		--color-gray-300: hsl(0 0 14);
-		--color-gray-400: hsl(0 0 24);
-		--color-gray-500: hsl(0 0 31);
-		--color-gray-600: hsl(0 0 38);
-		--color-gray-700: hsl(0 0 45);
-		--color-gray-800: hsl(0 0 56);
-		--color-gray-900: hsl(0 0 66);
-		--color-gray-1000: hsl(0 0 78);
-		--color-gray-1100: hsl(0 0 87);
-		--color-gray-1200: hsl(0 0 95);
-		--color-reimu-100: hsl(358 67 8);
-		--color-reimu-200: hsl(359 69 13);
-		--color-reimu-300: hsl(357 71 16);
-		--color-reimu-400: hsl(358 70 28);
-		--color-reimu-500: hsl(358 68 36);
-		--color-reimu-600: hsl(358 65 44);
-		--color-reimu-700: hsl(358 65 53);
-		--color-reimu-800: hsl(357 81 65);
-		--color-reimu-900: hsl(357 87 75);
-		--color-reimu-1000: hsl(357 90 85);
-		--color-reimu-1100: hsl(357 87 91);
-		--color-reimu-1200: hsl(355 76 97);
-		--color-blue-100: hsl(224 60 9);
-		--color-blue-200: hsl(227 59 14);
-		--color-blue-300: hsl(226 60 19);
-		--color-blue-400: hsl(226 60 32);
-		--color-blue-500: hsl(226 59 41);
-		--color-blue-600: hsl(226 59 49);
-		--color-blue-700: hsl(226 81 59);
-		--color-blue-800: hsl(221 100 67);
-		--color-blue-900: hsl(214 97 71);
-		--color-blue-1000: hsl(210 94 80);
-		--color-blue-1100: hsl(209 97 88);
-		--color-blue-1200: hsl(207 91 96);
-		--color-marisa-100: hsl(38 76 5);
-		--color-marisa-200: hsl(37 76 8);
-		--color-marisa-300: hsl(37 75 11);
-		--color-marisa-400: hsl(38 75 19);
-		--color-marisa-500: hsl(37 75 24);
-		--color-marisa-600: hsl(38 76 29);
-		--color-marisa-700: hsl(37 74 35);
-		--color-marisa-800: hsl(38 71 43);
-		--color-marisa-900: hsl(41 60 54);
-		--color-marisa-1000: hsl(44 64 67);
-		--color-marisa-1100: hsl(48 67 79);
-		--color-marisa-1200: hsl(50 71 92);
-		--color-green-100: hsl(140 82 4);
-		--color-green-200: hsl(141 88 6);
-		--color-green-300: hsl(139 86 9);
-		--color-green-400: hsl(139 87 15);
-		--color-green-500: hsl(139 86 19);
-		--color-green-600: hsl(139 83 24);
-		--color-green-700: hsl(139 80 29);
-		--color-green-800: hsl(139 69 38);
-		--color-green-900: hsl(140 51 50);
-		--color-green-1000: hsl(139 58 66);
-		--color-green-1100: hsl(140 66 79);
-		--color-green-1200: hsl(139 79 92);
-	}
+	/* blue */
+	--color-blue-100: #edf4ff;
+	--color-blue-200: #deeaff;
+	--color-blue-300: #c4d9fd;
+	--color-blue-400: #96baff;
+	--color-blue-500: #719cfb;
+	--color-blue-600: #4e76e2;
+	--color-blue-700: #2755c7;
+	--color-blue-800: #06328c;
+	--color-blue-900: #011446;
+
+	/* marisa */
+	--color-marisa-100: #fbf3d1;
+	--color-marisa-200: #f7eab8;
+	--color-marisa-300: #edd698;
+	--color-marisa-400: #d9b468;
+	--color-marisa-500: #c79c49;
+	--color-marisa-600: #a57911;
+	--color-marisa-700: #845d11;
+	--color-marisa-800: #553a07;
+	--color-marisa-900: #261803;
+
+	/* green */
+	--color-green-100: #dcfce6;
+	--color-green-200: #c0f6d2;
+	--color-green-300: #92eaad;
+	--color-green-400: #62cf7d;
+	--color-green-500: #2fb459;
+	--color-green-600: #00903a;
+	--color-green-700: #006b28;
+	--color-green-800: #004616;
+	--color-green-900: #002206;
 }
